--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,5 +6,7 @@ pytesseract==0.3.10
 aiofiles==23.1.0
 
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 pymongo[srv]==4.7.3
 python-dotenv==1.0.0
+httpx>=0.24.0
