--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,13 @@
     "autoprefixer": "^10.4.24",
     "axios": "1.4.0",
     "jspdf": "^4.2.0",
+    "mongoose": "^9.2.1",
     "next": "13.4.10",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.4.1",
-    "next-pwa": "^5.6.0",
     "zustand": "4.5.7"
   },
   "devDependencies": {
