--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,8 @@ uvicorn[standard]==0.22.0
 python-multipart==0.0.6
 pillow==10.0.0
 pytesseract==0.3.10
+pdf2image>=1.16.3
+pypdf>=4.0.0
 aiofiles==23.1.0
 
 passlib[bcrypt]==1.7.4
